# makepad-shell

./: .gitignore  Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: command.rs  error.rs  lib.rs  notification.rs  shortcut.rs  tray.rs
crates/core/src/menu/: context.rs  event.rs  menubar.rs  mod.rs  model.rs  shortcut.rs
crates/shell/: Cargo.toml
crates/shell/examples/: context_menu.rs
crates/shell/src/: app_menu.rs  context_menu.rs  lib.rs  notifications.rs  tray.rs
examples/makepad_context_menu/: Cargo.toml
examples/makepad_context_menu/src/: app.rs  main.rs
examples/makepad_notification/: Cargo.toml  README.md
examples/makepad_notification/src/: app.rs  main.rs
examples/makepad_tray/: Cargo.toml
examples/makepad_tray/src/: app.rs  main.rs
