[workspace]
members = [
    "crates/*",
    "examples/*"
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
makepad-shell           = { path = "crates/shell" }
makepad-shell-core      = { path = "crates/core" }
makepad-shell-platforms = { path = "crates/platforms" }


objc2 = "0.6.1"
objc2-app-kit              = { version = "0.3.1", default-features = false, features = ["std"] }
objc2-foundation           = { version = "0.3.1", default-features = false, features = ["std"] }