[package]
name        = "makepad-shell"
description = "Cross-platform system shell UI primitives for Makepad"
version     = { workspace = true }
edition     = { workspace = true }

[features]
default = []

# Shared primitives
command = []
shortcut = []

# Core capability groups
menu-model = ["command", "shortcut"]
app-menu = ["menu-model"]
context-menu = ["menu-model"]
tray = ["command", "shortcut"]
notification = ["command"]

# Platform backends (macOS implemented)
platforms = ["dep:makepad-shell-platforms"]

[dependencies]
makepad-shell-core      = { workspace = true }
makepad-shell-platforms = { workspace = true, optional = true }

[dev-dependencies]
